--- a/views/playerList.jade
+++ b/views/playerList.jade
@@ -16,8 +16,7 @@ block inlineScripts
 						.css('display','')
 						.find('a.name').attr('href', '/player/' + p._id).text(p.name_display_first_last);
 					newRow.find('a.hiddenLink').text(
-						p.fantasy_team == undefined ? '' : 
-							p.fantasy_team == 'FA' ? '' : p.fantasy_team)
+						p.history[1] != undefined && p.history[1].fantasy_team != 'FA' ? p.history[1].fantasy_team : '')
 						.attr('href', '/team' + p.fantasy_team);
 					tableBody.append(newRow);
 				});
@@ -41,8 +40,8 @@ block content
 						td
 							a.name(href="/player/"+player._id)= player.name_display_first_last
 						td
-							-if(player.fantasy_team && player.fantasy_team != 'FA')
-								mixin teamLink(teamHash[player.fantasy_team], false)
+							-if(player.history[1] && player.history[1].fantasy_team && player.history[1].fantasy_team != 'FA')
+								mixin teamLink(teamHash[player.history[1].fantasy_team], false)
 							
 
 	table(style="display:none")
