--- a/views/partials/team.jade
+++ b/views/partials/team.jade
@@ -36,15 +36,8 @@ mixin team(players, includeStatus, config)
 			mixin player(players.outfielders[3], 'OF', includeStatus, config)
 			mixin player(players.outfielders[4], 'OF', includeStatus, config)
 			mixin player(players.utility, 'U', includeStatus, config)
-			mixin player(players.pitchers[0], 'P', includeStatus, config)
-			mixin player(players.pitchers[1], 'P', includeStatus, config)
-			mixin player(players.pitchers[2], 'P', includeStatus, config)
-			mixin player(players.pitchers[3], 'P', includeStatus, config)
-			mixin player(players.pitchers[4], 'P', includeStatus, config)
-			mixin player(players.pitchers[5], 'P', includeStatus, config)
-			mixin player(players.pitchers[6], 'P', includeStatus, config)
-			mixin player(players.pitchers[7], 'P', includeStatus, config)
-			mixin player(players.pitchers[8], 'P', includeStatus, config)
+			-each pitcher in players.pitchers
+				mixin player(pitcher, 'P', includeStatus, config)
 			-if(players.dl != undefined)
 				-for(var i = 0; i < players.dl.length; i++)
 					mixin player(players.dl[i], 'DL', includeStatus, config)
