--- a/views/historicalTeam.jade
+++ b/views/historicalTeam.jade
@@ -7,4 +7,10 @@ block content
 		h1= team.fullName
 		h2= year + " Roster"
 	section(id="left")
-		mixin team(players, false)
+		-var tempConfig = {};
+		-for(var prop in config) {
+		-	tempConfig[prop] = config[prop];
+		-}
+		-tempConfig.isTeamOwner = user != null && user.team == team.team
+		-tempConfig.historicalPage = true
+		mixin team(players, false, tempConfig)
