--- a/views/team.jade
+++ b/views/team.jade
@@ -97,19 +97,22 @@ block content
 			p= message
 
 	section(id="left" style="width:800px")
+		= config.historicalPage
 		div
-			h2= "Roster - " + config.year
-			br
-			-if(config.isOffseason && user != null && user.team == team.team)
-				p#draftBudget(style="display:inline;font-size:20px;width:400px")='2014 Draft Budget: ' + draftCash.value
+			p Last Year's Roster:
+				a(style="padding-left:20px" href="/team/" + team.team + "/2013") 2013
+			-var nextYear = parseInt(config.year) + 1
+			-if(config.isKeeperPeriod && config.isTeamOwner)
+				h3= "Select your keepers from " + config.year + " roster"
+				p#draftBudget(style="display:inline;font-size:20px;margin-right:40px")=nextYear + ' Draft Budget: ' + draftCash.value
 				
-				-if(isTeamOwner)
-					input.saveChanges(type="button" value="Save Keeper Selections" onclick="saveChanges('" + team.team + "')")
+				-if(config.isTeamOwner)
+					input.saveChanges(style="line-height:50%" type="button" value="Save Keeper Selections" onclick="saveChanges('" + team.team + "')")
 
 			-if(!config.isKeeperPeriod || (user != null && user.team == team.team))
 				mixin team(players, true, config)
 			-else
-				p Check back after the keeper deadline for 2014 roster
+				p= "Check back after the keeper deadline for " + nextYear + " roster"
 
 			-if(config.isTradingOn)
 				h2 Trades
